--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -24,12 +24,12 @@ body {
         #2c5364
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    font-family: 'Red Hat Text', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: white;
 }
 
 :root {
-    --header-height: 5rem;
+    --header-height: 4rem;
 }
 
 .app-header {
@@ -48,7 +48,13 @@ body {
     height: var(--header-height);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0 1rem;
+}
+
+.app-header_text{
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 .app-container {
@@ -67,9 +73,8 @@ body {
     height: 100%;
 }
 
-.results {
-    flex-grow: 1;
-    overflow-y: auto;
+.results__item{
+    margin-bottom: 0.5rem;
 }
 
 .grid-form {
